--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,14 +9,14 @@
 <body>
 
 <header>
-    <h1>Your Name</h1>
-    <p>Web Developer | Cartoon Enthusiast | Creative Mind</p>
+    <h1>Pratik Singh</h1>
+    <p>Web Developer | Mastering Full-Stack Synergy | Creative Mind</p>
 </header>
 
 <section class="section about">
     <h2>About Me</h2>
-    <img src="your-image.jpg" alt="Your Photo">
-    <p>Hi! I'm [Your Name], a web developer with a knack for creating fun and visually appealing websites. I specialize in HTML, CSS, and JavaScript, and I love adding a touch of whimsy to my projects!</p>
+    <img src="img1.png" alt="Your Photo">
+    <p>Hi! I'm Pratik Singh, a web developer with a knack for creating fun and visually appealing websites and I love adding a touch of whimsy to my projects!</p>
 </section>
 
 <section class="section skills">
@@ -24,21 +24,22 @@
     <div class="skill">HTML</div>
     <div class="skill">CSS</div>
     <div class="skill">JavaScript</div>
-    <div class="skill">Responsive Design</div>
+    <div class="skill">React</div>
+    <div class="skill">nodejs</div>
     <div class="skill">Version Control (Git)</div>
 </section>
 
 <section class="section projects">
     <h2>Projects</h2>
-    <div class="project">
-        <img src="project1.jpg" alt="Project 1">
+    <a class="project" href="https://real-estate-website-mocha-eta.vercel.app/">
+        <img src="img2.png" alt="Project 1">
         <h3>Project 1</h3>
-        <p>A fun project showcasing animation and interactivity.</p>
-    </div>
+        <p>A responsive real estate website built for a local business.</p>
+    </a>
     <div class="project">
-        <img src="project2.jpg" alt="Project 2">
+        <img src="img3.png" alt="Project 2">
         <h3>Project 2</h3>
-        <p>A responsive website built for a local business.</p>
+        <p>A responsive website for online book store.</p>
     </div>
 </section>
 
@@ -49,12 +50,12 @@
 
 <section class="section contact">
     <h2>Contact Me</h2>
-    <p>Email: your.email@example.com</p>
-    <p>Phone: +123 456 7890</p>
+    <p>Email: pratik00888@gmail.com</p>
+    <p>Phone: +91 996726631</p>
 </section>
 
 <footer>
-    <p>&copy; 2024 Your Name. All rights reserved.</p>
+    <p>&copy; 2024 Pratik Singh. All rights reserved.</p>
 </footer>
 
 </body>
