--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,11 +36,11 @@
         <h3>Project 1</h3>
         <p>A responsive real estate website built for a local business.</p>
     </a>
-    <div class="project">
+    <a class="project" href="https://book-store-seven-brown.vercel.app/">
         <img src="img3.png" alt="Project 2">
         <h3>Project 2</h3>
         <p>A responsive website for online book store.</p>
-    </div>
+    </a>
 </section>
 
 <section class="section resume">
